--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,7 @@
         "laravel/tinker": "^2.9",
         "laravel/ui": "^4.6",
         "php-flasher/flasher-toastr-laravel": "^2.1",
+        "yajra/laravel-datatables-oracle": "^11.1",
         "yoeunes/toastr": "^3.1"
     },
     "require-dev": {
