Some issue fix and push

--- a/public/.htaccess
+++ b/public/.htaccess
@@ -21,5 +21,10 @@
     # Send Requests To Front Controller...
     RewriteCond %{REQUEST_FILENAME} !-d
     RewriteCond %{REQUEST_FILENAME} !-f
-    RewriteRule ^ index.php [L]
+    # RewriteRule ^ index.php [L]
+
+
+    RewriteRule ^$ /index.php [L]
+    RewriteRule ^(.*)$ index.php [QSA,L]
+
 </IfModule>
